# graphrag-aws-template

./: .agentbundle-state.toml  .gitignore  .pip-audit-ignore  AGENTS.md  README.md  pyproject.toml  workspace.toml
.claude/skills/capture-work/: SKILL.md
.claude/skills/frontend-engineering/: SKILL.md
.claude/skills/frontend-engineering/references/: digital-experience-contract.md
.claude/skills/generate-iac/: SKILL.md
.claude/skills/generate-iac/references/: bootstrap-sequence.md  networking-standard.md  observability-standard.md  opentofu-differences.md  policy-on-plan.md  provider-contract.md  release-loop-integration.md  security-iam-standard.md  spec-plan-tasks-shape.md  tagging-standard.md  (+2 more)
.claude/skills/infra-contract-acquisition/: SKILL.md
.claude/skills/init-project/: SKILL.md
.claude/skills/new-adr/: SKILL.md
.claude/skills/new-rfc/: SKILL.md
.claude/skills/operational-safety/: SKILL.md
.claude/skills/reconcile-iac/: SKILL.md
.claude/skills/rfc-status/: SKILL.md
.claude/skills/security-checklists/: SKILL.md
.claude/skills/work-loop/: SKILL.md
.claude/skills/workspace-status/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/infra/: README.md  app.py  cdk.json  requirements.txt
apps/infra-tf/: .trivyignore  api_gateway_mcp.tf  backend.hcl.example  backend.tf  budget.tf  compute.tf  git_ingestion_trigger.tf  iam.tf  lambda.tf  mcp_lambda.tf  neptune.tf  network.tf  opensearch.tf  otel-collector-config.yaml  outputs.tf  provider.tf  pyproject.toml  s3.tf  security_groups.tf  variables.tf  versions.tf
apps/infra-tf/scripts/: bootstrap.sh  probe.sh
apps/infra-tf/tests/: conftest.py  test_plan.py
apps/infra/scripts/: _aws-env.sh  config.env  config.local.env.example  deploy.sh  destroy.sh  status.sh
apps/infra/stacks/: graphrag_stack.py
apps/infra/tests/: test_pre_pr_secret_guard.py  test_stack.py
apps/ingestion/: Dockerfile  __init__.py  entrypoint.py
apps/ingestion/tests/: test_entrypoint.py
docs/: CHARTER.md  CONVENTIONS.md  backlog.md
docs/adr/: 0001-hybrid-orchestration-seed-and-expand.md  0002-ephemeral-vpc-store-topology.md  0003-iac-tool-aws-cdk-python.md  0004-text2cypher-read-only-guard.md  0005-community-detection-in-fargate-louvain.md  0006-schema-guided-llm-extraction-guard.md  0007-silver-cache-content-and-config-addressed.md  0008-automatic-engine-routing-local-vs-global.md  0009-access-control-synthetic-labels-not-real-authz.md  0010-terraform-migration.md  0011-neptune-sparql-rdf-engine-and-text2sparql-guard.md  0012-owl-schema-only-and-named-graph-partition.md  0013-multi-strategy-server-side-routing.md  0014-mcp-tool-server.md  0015-otel-observability.md  0016-git-ingestion-commit-sha-delta-medallion.md  README.md
docs/architecture/: README.md  architecture-concept.md  deployment-and-verification.md  deployment-timing.md  develop-and-test-offline.md  infrastructure.md  overview.md  security.md
docs/architecture/_archive/: deployment-timing.md  infrastructure.md
docs/architecture/biz-ops-knowledge-graph/: design.md
docs/architecture/graphrag-aws-architecture/: design.md
docs/guides/: README.md
docs/guides/explanation/: README.md  choosing-what-to-ingest.md  global-community-summary.md  governed-vs-risky-graph-queries.md  ingestion-patterns-and-retrieval-patterns.md  metadata-self-query-filtering.md  parent-child-retrieval.md  synthetic-labels-to-real-acls.md
docs/guides/how-to/: README.md
docs/guides/reference/: README.md
docs/guides/tutorials/: README.md  incremental-delta-demo.md  three-mode-demo.md
docs/knowledge/: patterns.jsonl
docs/product/: changelog.md  product-intent.md  roadmap.md
docs/product/briefs/: graphrag-aws-demo.md  graphrag-pattern-catalog.md
docs/product/intents/: graphrag-aws-demo.md  rfc-0004-biz-ops-kg-pivot.md
docs/rfc/: 0001-adopt-project-charter.md  0002-ingestion-pattern-axis.md  0003-medallion-staging.md  0004-biz-ops-kg-pivot.md  README.md
docs/rfc/0001-notes/: aws-feasibility.md
docs/specs/: README.md
docs/specs/engine-routing/: plan.md  spec.md
docs/specs/global-community-summary/: plan.md  spec.md
docs/specs/graph-ingestion-resolution/: plan.md  spec.md
docs/specs/hybrid-orchestration/: plan.md  spec.md
docs/specs/incremental-delta-reingest/: plan.md  spec.md
docs/specs/infra-config-separation/: plan.md  spec.md
docs/specs/infra-terraform-compute/: plan.md  spec.md
docs/specs/infra-terraform-data-and-iam/: plan.md  spec.md
docs/specs/infra-terraform-network/: plan.md  spec.md
docs/specs/infra-terraform-scaffold/: plan.md  spec.md
docs/specs/infra-terraform-verification/: plan.md  spec.md
docs/specs/infra-tf-api-gateway-mcp/: plan.md  spec.md
docs/specs/mcp-proxy/: spec.md
docs/specs/medallion-staging/: plan.md  spec.md
docs/specs/metadata-filtering/: plan.md  spec.md
docs/specs/neptune-sparql-engine/: plan.md  spec.md
docs/specs/opencypher-templates/: plan.md  spec.md
docs/specs/opensearch-create-index-idempotency/: plan.md  spec.md
docs/specs/parent-child-retrieval/: plan.md  spec.md
docs/specs/permission-filtered-retrieval/: plan.md  spec.md
docs/specs/rdf-owl-ontology/: plan.md  spec.md
docs/specs/rdf-owl-ontology-loader/: plan.md  spec.md
docs/specs/schema-guided-extraction/: plan.md  spec.md
docs/specs/security-hardening-followups/: plan.md  spec.md
docs/specs/spec-git-ingestion/: plan.md  spec.md
docs/specs/spec-ingestion-extraction-cleanse/: plan.md  spec.md
docs/specs/spec-mcp-tool-server/: plan.md  spec.md
docs/specs/spec-multi-strategy-routing/: plan.md  spec.md
docs/specs/spec-normative-partition/: plan.md  spec.md
docs/specs/spec-otel-observability/: plan.md  spec.md
docs/specs/spec-provenance-citations/: plan.md  spec.md
docs/specs/spec-shacl-validation/: plan.md  spec.md
docs/specs/spec-text2sparql-guarded/: plan.md  spec.md
docs/specs/text2opencypher-guarded/: plan.md  spec.md
docs/specs/update-architecture-docs/: spec.md
docs/specs/vector-rag-baseline/: plan.md  spec.md
scripts/: delta-demo.sh
tools/hooks/: pre-pr.py  work-loop-check.py
(+38 files in other folders)
