[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-aws-demo"
version = "0.1.0"
description = "GraphRAG-on-AWS reference demo — graph ingestion + cross-source entity resolution (slice 1)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    # boto3 >= 1.35: the floor at which bedrock-runtime `converse` exists (slice 3
    # Bedrock Claude synthesis). A version-floor bump, not a new dependency.
    "boto3>=1.35",
]

[project.optional-dependencies]
# IaC toolchain — isolated so the runtime app never imports CDK.
infra = [
    "aws-cdk-lib>=2.140",
    "constructs>=10.3",
]
# Ingest-only: community detection (Louvain) runs in the Fargate ingest task, never the
# query Lambda (ADR-0005). networkx is imported lazily by graphrag.community_detect and is
# kept out of the PyYAML-free query-Lambda import graph (a sys.modules guard asserts this).
# Installed in the Fargate image (apps/ingestion/Dockerfile) and pulled into `dev` so tests
# can run detection offline.
ingest = [
    "networkx>=3.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    # tests detect communities offline, so the dev env needs the ingest extra.
    "graphrag-aws-demo[ingest]",
]

[project.scripts]
graphrag = "graphrag.cli:main"

[tool.setuptools.packages.find]
where = ["packages/graphrag/src"]

[tool.setuptools.package-data]
graphrag = ["aliases.yaml", "labels.yaml", "py.typed", "showcase/queries.yaml"]

[tool.pytest.ini_options]
testpaths = ["packages/graphrag/tests", "apps/ingestion/tests", "apps/infra/tests"]
pythonpath = ["packages/graphrag/src", "apps", "apps/infra"]

[tool.ruff]
line-length = 100
src = ["packages/graphrag/src", "apps"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import-sort, UP pyupgrade, B bugbear,
# S flake8-bandit (security — catches unsafe yaml.load as S506).
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests: asserts (S101), mock/fake credentials (S105/S106), and subprocess calls against
# test-constructed (trusted) inputs (S603/S607 — e.g. driving the delta demo over a throwaway
# git repo) are expected.
"**/tests/**" = ["S101", "S105", "S106", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
files = ["packages/graphrag/src", "apps"]
# cdk synth copies the graphrag package into apps/infra/cdk.out/asset.*/ (the
# Lambda bundle); exclude it so mypy doesn't see a duplicate `graphrag` module.
exclude = "(^|/)cdk\\.out/"

[[tool.mypy.overrides]]
module = ["yaml", "boto3", "boto3.*", "botocore", "botocore.*", "aws_cdk", "aws_cdk.*", "constructs", "networkx", "networkx.*"]
ignore_missing_imports = true

# numpy is not a project dependency; it is pulled into some environments transitively
# (via other globally-installed tools) and its current stubs use 3.12-only `type`
# syntax that mypy rejects under our 3.11 target, aborting the run before it checks
# any project code. Skip following it — we never import it.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true
