[build-system]
requires = ["setuptools>=83"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-aws-demo"
version = "0.1.0"
description = "GraphRAG-on-AWS reference demo — graph ingestion + cross-source entity resolution (slice 1)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    # boto3 >= 1.35: the floor at which bedrock-runtime `converse` exists (slice 3
    # Bedrock Claude synthesis). A version-floor bump, not a new dependency.
    "boto3>=1.35",
]

[project.optional-dependencies]
# IaC toolchain — isolated so the runtime app never imports CDK.
infra = [
    "aws-cdk-lib>=2.140",
    "constructs>=10.3",
    # cdk-nag: AwsSolutionsChecks applied as a synth-time Aspect (app.py) — a HARD gate, an
    # unsuppressed finding fails `cdk synth` / CI (security-hardening-followups AC4). Every
    # NagSuppressions entry carries a reason citing its sign-off. Pinned to the 2.x line: 3.x is
    # ABI-incompatible with aws-cdk-lib 2.x ("aspect.visit is not a function" at synth).
    "cdk-nag>=2.35,<3",
]
# Ingest-only: community detection (Louvain) runs in the Fargate ingest task, never the
# query Lambda (ADR-0005). networkx is imported lazily by graphrag.community_detect and is
# kept out of the PyYAML-free query-Lambda import graph (a sys.modules guard asserts this).
# Installed in the Fargate image (apps/ingestion/Dockerfile) and pulled into `dev` so tests
# can run detection offline.
ingest = [
    "networkx>=3.0",
    "rdflib>=6.3",
    "pyshacl>=0.25,<0.27",
    # Format extraction — lighter deps (no PyTorch stack).
    # pypandoc wraps the pandoc binary (baked into the Fargate image).
    # markitdown handles .pptx and .xlsx.
    "pypandoc>=1.5",
    "markitdown>=0.0.1",
    # pillow floor: markitdown→python-pptx→Pillow; 12.3.0 patches PYSEC-2026-{3451,3452,3453,3454,2253,2254,2255,2256,3493,3494,3495,3496}
    "pillow>=12.3.0",
]
# Full ingestion extra: includes docling (PyTorch, ~2.4 GB model weights).
# NOT added to [dev] — too heavy for general development.
# The Fargate image installs graphrag-aws-demo[ingest-full].
"ingest-full" = [
    "graphrag-aws-demo[ingest]",
    # docling: MIT/Apache-2.0 licensed digital PDF extractor.
    # MUST NOT use pymupdf4llm — AGPL; closed-source use requires a commercial licence.
    "docling>=2.0",
    # pdfminer.six: scanned-PDF detection heuristic in DoclingExtractor.
    # Also a transitive dependency of docling.
    "pdfminer.six>=20221105",
]
server = [
    # MCP tool server — FastMCP + Mangum Lambda adapter.
    # Also pulled into [dev] so CI installs it via graphrag-aws-demo[server].
    "mcp>=1.0",
    "pydantic>=2.0",
    "mangum>=0.21",
]
observability = [
    # OTEL tracing — in-process SDK for content-capture filter, local/test spans.
    # The ADOT Lambda layer supplies AWSOpenTelemetryDistro + collector at runtime
    # (owned by infra-tf/mcp-otel-lambda); offline tests need only opentelemetry-sdk.
    "opentelemetry-sdk>=1.25",
    # EMF metrics — CloudWatch Embedded Metric Format (no extra AWS service needed).
    "aws-embedded-metrics>=3.5",
    # Structured JSON logging (ADR-0015 item 4).
    "python-json-logger>=2.0",
]
dev = [
    # setuptools floor pinned above the PYSEC-2026-3447 fix (83.0.0); forces pip to upgrade
    # the runner's pre-installed 79.0.1 so pip-audit stays clean.
    "setuptools>=83",
    "pytest>=8.0",
    # ruff/mypy are pinned to EXACT versions, not floors: the CI `ruff format --check`
    # gate (security-hardening-followups AC6) is only deterministic if every run formats
    # identically — a floating `ruff>=0.5` would flag drift the moment ruff's formatter
    # changes. Bump in lockstep with a one-time `ruff format packages apps` re-run.
    "ruff==0.15.17",
    "mypy==2.3.0",
    # pip-audit: supply-chain vulnerability scan over the dependency closure (AC3). The CI
    # job fails on a known vuln; accepted exceptions live in .pip-audit-ignore with a reason.
    "pip-audit>=2.10",
    # tests detect communities offline, so the dev env needs the ingest extra.
    "graphrag-aws-demo[ingest]",
    # MCP server deps — pulls in mcp, pydantic, mangum for offline tests.
    "graphrag-aws-demo[server]",
    # HTTP client used by the subprocess transport test (test_mock_subprocess.py).
    "requests>=2.28",
    # Enforces @pytest.mark.timeout; without this the markers are silently inert.
    "pytest-timeout>=2.0",
    # Observability deps — pulls in opentelemetry-sdk, aws-embedded-metrics, python-json-logger.
    "graphrag-aws-demo[observability]",
]

[project.scripts]
graphrag = "graphrag.cli:main"

[tool.setuptools.packages.find]
where = ["packages/graphrag/src"]

[tool.setuptools.package-data]
graphrag = ["aliases.yaml", "labels.yaml", "py.typed", "showcase/queries.yaml", "ontology/*.ttl", "otel-collector-config.yaml"]

[tool.pytest.ini_options]
testpaths = ["packages/graphrag/tests", "apps/ingestion/tests", "apps/infra/tests"]
pythonpath = ["packages/graphrag/src", "apps", "apps/infra"]
markers = [
    "timeout: marks tests with a timeout in seconds (requires pytest-timeout to enforce; harmless without it)",
]

[tool.ruff]
line-length = 100
src = ["packages/graphrag/src", "apps"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import-sort, UP pyupgrade, B bugbear,
# S flake8-bandit (security — catches unsafe yaml.load as S506).
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests: asserts (S101), mock/fake credentials (S105/S106), and subprocess calls against
# test-constructed (trusted) inputs (S603/S607 — e.g. driving the delta demo over a throwaway
# git repo) are expected.
"**/tests/**" = ["S101", "S105", "S106", "S603", "S607", "S608"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
files = ["packages/graphrag/src", "apps"]
# cdk synth copies the graphrag package into apps/infra/cdk.out/asset.*/ (the
# Lambda bundle); exclude it so mypy doesn't see a duplicate `graphrag` module.
exclude = "(^|/)cdk\\.out/|(^|/)infra-tf/"

[[tool.mypy.overrides]]
module = ["yaml", "boto3", "boto3.*", "botocore", "botocore.*", "aws_cdk", "aws_cdk.*", "constructs", "networkx", "networkx.*"]
ignore_missing_imports = true

# numpy is not a project dependency; it is pulled into some environments transitively
# (via other globally-installed tools) and its current stubs use 3.12-only `type`
# syntax that mypy rejects under our 3.11 target, aborting the run before it checks
# any project code. Skip following it — we never import it.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["rdflib", "rdflib.*", "pyshacl", "pyshacl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pypandoc", "markitdown", "markitdown.*", "docling", "docling.*", "pdfminer", "pdfminer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*", "mangum", "mangum.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["opentelemetry", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aws_embedded_metrics", "aws_embedded_metrics.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pythonjsonlogger", "pythonjsonlogger.*"]
ignore_missing_imports = true
